# lcm-sketch-progression

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
server/: config.py  main.py
src/lcm_sketch_progression/: __init__.py  progressor.py
view/lcm-sketch-progression/: package-lock.json  package.json
view/lcm-sketch-progression/src/: App.tsx
